<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/registerctivity"
    android:background="#66FFCC"
    tools:context="com.soundrecognition.musicmatcher.LoginActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:id="@+id/imageView"
        android:src="@drawable/mmlogo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/registerUser"
        android:hint="@string/user"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/registerPassword"
        android:hint="@string/pwd"
        android:inputType="textPassword"
        android:layout_below="@+id/registerUser"
        android:layout_alignEnd="@+id/registerUser"
        android:layout_alignStart="@+id/registerUser" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/registerEmail"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/registerPassword"
        android:layout_alignEnd="@+id/registerPassword"
        android:layout_alignStart="@+id/registerPassword" />

    <TextView
        android:id="@+id/register_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dip"
        android:textColor="#FF8500"
        android:textStyle="bold"
        android:layout_below="@+id/registerEmail"
        android:layout_alignEnd="@+id/registerEmail"
        android:layout_alignStart="@+id/registerEmail" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:id="@+id/btn_register"
        android:text="@string/btnRegister"
        android:background="#0033FF"
        android:textColor="#fff"
        android:onClick="registerUser"
        android:layout_below="@+id/registerEmail"
        android:layout_alignEnd="@+id/registerEmail"
        android:layout_alignStart="@+id/registerEmail" />

    <TextView
        android:id="@+id/register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="navigatetoLoginActivity"
        android:text="Already a member? Login"
        android:gravity="center"
        android:textSize="16dip"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/btn_register"
        android:layout_alignStart="@+id/btn_register"
        android:layout_alignEnd="@+id/btn_register" />

</RelativeLayout>
